--- a/templates/horarios/horarios_por_ciclo.html
+++ b/templates/horarios/horarios_por_ciclo.html
@@ -39,7 +39,7 @@
                                 <select class="form-select" aria-label="Default select example" id="combo_ciclo">
                                     <option value="-1" selected>[-- SELECCIONE --]</option>
                                     {% for ciclo in ciclos %}
-                                        <option value="{{ ciclo[0] }}">{{ ciclo[0] }}</option>
+                                        <option value="{{ ciclo[0] }}">Ciclo Acádemico {{ ciclo[0] }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
