--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -149,7 +149,7 @@
                     table.draw();
                 })
                 .catch(error => {
-                    console.error('Error al obtener los datos de la tabla:', error);
+                    console.error('Error al obtener los datos de la tablas:', error);
                 });
         };
     
