--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -99,10 +99,10 @@
             </div>
             <!-- Espacio y botón verde -->
             <div class="d-flex justify-content-center mt-3"> <!-- Cambio en el margen superior -->
-                <button class="btn btn-success btn-lg" onclick="generarHorario()">Generar Horario</button>
+                <button class="btn btn-success btn-lg mx-2" onclick="generarHorario()">Generar Horario</button>
                 <!-- Cambio en el tamaño -->
 
-                <button class="btn btn-success btn-lg" onclick="RegistrarHorario()">Regstrar Horario</button>
+                <button class="btn btn-success btn-lg mx-2" onclick="RegistrarHorario()">Regstrar Horario</button>
                 <!-- Cambio en el tamaño -->
             </div>
             <div class="d-flex justify-content-center mt-3"> <!-- Cambio en el margen superior -->
