disponibildiad(falta que funcione bien )

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -186,6 +186,13 @@
 									alt="planning-skill" /> <span class="align-middle">Horarios por Ciclo</span>
 							</a>
 						</li>
+						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('disponibilidad')}}">
+								<img data-image=""
+									src="https://img.icons8.com/ios-filled/50/planning-skill.png"
+									alt="planning-skill" /> <span class="align-middle">Disponibilidad</span>
+							</a>
+						</li>
 
 						<!-- aca -->
 						<li class="sidebar-item">
