--- a/templates/dashboard/disponibilidad.html
+++ b/templates/dashboard/disponibilidad.html
@@ -25,10 +25,10 @@
                     <thead>
                         <tr>
                             <th style="width: 20%; text-align: center;">Docente</th>
-                            <th style="width: 3%; text-align: center;">Dia</th>
-                            <th style="width: 3%; text-align: center;">Hora Inicio</th>
-                            <th style="width: 30%; text-align: center;">Hora Fin</th>
-                            <th style="width: 3%; text-align: center;">Opciones</th>
+                            <th style="width: 10%; text-align: center;">Dia</th>
+                            <th style="width: 15%; text-align: center;">Hora Inicio</th>
+                            <th style="width: 15%; text-align: center;">Hora Fin</th>
+                            <th style="width: 10%; text-align: center;">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -145,28 +145,7 @@
 
 <script>
     $(document).ready(function () {
-        var ambientes = [];
-        var edificios = {};
-
-        function cargarEdificios() {
-            $.ajax({
-                url: '/get_edificios',
-                type: 'GET',
-                dataType: 'json',
-                success: function (response) {
-                    edificios = response.reduce((acc, edificio) => {
-                        acc[edificio.idedificio] = edificio.nombre;
-                        return acc;
-                    }, {});
-                    $('#idedificio').append(response.map(function (edificio) {
-                        return `<option value="${edificio.idedificio}">${edificio.nombre}</option>`;
-                    }));
-                },
-                error: function (xhr, status, error) {
-                    console.error('Error al cargar edificios:', error);
-                }
-            });
-        }
+        var disponibilidad = [];
 
         function initializeDataTable() {
             var table = $('#tabla-ambiente').DataTable({
@@ -248,22 +227,17 @@
                 ],
 
                 "ajax": {
-                    "url": "/get_ambientes",
+                    "url": "/get_disponibilidad",
                     "type": "GET",
                     "dataSrc": ""
                 },
                 "processing": true,
                 "serverSide": false, // Desactiva la recarga automática al ordenar
                 "columns": [
-                    { "data": "nombre", "className": 'dt-body-left' },
-                    { "data": "aforo", "className": 'dt-body-center' },
-                    { "data": "estado" },
-                    {
-                        "data": "idedificio", "className": 'dt-body-left',
-                        "render": function (data, type, row) {
-                            return edificios[data] || data;
-                        }
-                    },
+                    { "data": "nombre_completo", "className": 'dt-body-left' },
+                    { "data": "dia", "className": 'dt-body-left' },
+                    { "data": "hora_inicio" },
+                    { "data": "hora_fin" },
                     {
                         "data": null, "className": 'dt-body-center',
                         "render": function (data, type, row) {
@@ -297,8 +271,6 @@
         } else {
             table = initializeDataTable();
         }
-
-        cargarEdificios();
 
         function mostrarAlerta(tipo, titulo, mensaje) {
             Swal.fire({
